0024934: Section: crash for two faces

Added protection from null vertexes.

Test case for issue CR24934